--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,9 @@
 <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" href="{{ '/assets/stylesheets/main.css' | relative_url }}">
+<link rel="stylesheet" href="{{ baseurl }}/assets/stylesheets/main.css">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-<link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ '/feed.xml' | relative_url }}">
+<link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ '/feed.xml' | absolute_url }}">
 
 <!-- START Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="https://pennypixels.pennymacusa.com/img/apple-touch-icon-57x57.png">
