--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-default">
+<div class="navbar navbar-default">
   <div class="container">
     <nav class="navbar-header">
       <a class="navbar-brand" href="{{ '/' | relative_url }}">
@@ -6,4 +6,4 @@
       </a>
     </nav>
   </div>
-</header>
+</div>
