--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,34 @@
     {% include head.html %}
   </head>
   <body>
-    {% include header.html %}
-    <div class="hero"></div>
+    <div class="header">
+      {% include header.html %}
+      <div class="text-center container-fluid">
+        <div class="row">
+          <div class="col-xs-12 title">
+            <div class="container">
+              <h1 itemprop="name headline">{{ page.title | upcase }}</h1>
+              {% if page.author or page.date %}<h2><small>
+              {% if page.date %}<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" | upcase }}</time>{% endif %}
+              {% if page.author and page.date %}&nbsp;/&nbsp;{% endif %}
+              {% if page.author %}<span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author | upcase }}</span></span>{% endif %}
+              </small></h2>{% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="bkg" class="hidden-xs">
+      <img src="{{ baseurl }}assets/images/work-station-straight-on-view.jpg">
+    </div>
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+        <div class="col-xs-12 col-sm-8 col-sm-offset-2 main">
           {{ content }}
         </div>
       </div>
     </div>
     {% include footer.html %}
-    {% include footer-script.html %}
   </body>
 </html>
