--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -2,57 +2,5 @@
 ---
 @charset "utf-8";
 
-$spacing-unit: 30px;
-/**
- * Set `margin-bottom` to maintain vertical rhythm
- */
-h1, h2, h3,
-p, blockquote, pre,
-ul, ol, dl, figure,
-%vertical-rhythm {
-  margin-bottom: $spacing-unit / 2;
-}
-h1, h2, h3 {
-  margin-top: $spacing-unit;
-}
-.highlighter-rouge {
-   margin-bottom: $spacing-unit;
-}
-
-.navbar-brand {
-  height: 70px;
-  margin: 0;
-  padding: 15px 0;
-}
-
-.navbar {
-  margin-bottom: 0;
-}
-
-.hero {
-  margin-bottom: 45px;
-}
-
-footer {
-  margin-top: 100px;
-}
-
-@media only screen and (max-width: 521px) {
-  .hero {
-    height: 300px;
-    background: url(https://source.unsplash.com/category/technology/466x466?laptop) no-repeat center bottom;
-    background-size: cover;
-  }
-}
-
-@media only screen and (min-width: 522px) {
-  .hero  {
-    height: 336px;
-    background: url(https://source.unsplash.com/category/technology/1920x1226?laptop) no-repeat center bottom;
-    background-size: cover;
-  }
-}
-
-@import
-  "syntax-highlighting"
-;
+@import "syntax-highlighting";
+@import "blog-style";
