--- a/_sass/_blog-style.scss
+++ b/_sass/_blog-style.scss
@@ -15,14 +15,6 @@ h1, h2, h3 {
    margin-bottom: $spacing-unit;
 }
 
-a {
-  color: #01217e;
-}
-
-a:hover {
-  color: #01175B;
-}
-
 .navbar-brand {
   height: 70px;
   margin: 0;
@@ -110,4 +102,8 @@ footer {
   width: 100%;
   height: 100%;
   left: 0; top: 0;
+}
+
+.blog-tags-list {
+  a { white-space: nowrap; }
 }
