--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,6 +1,8 @@
 ---
 ---
 @charset "utf-8";
-
+@import "colors";
+@import "bootstrap";
+@import "spacing";
 @import "syntax-highlighting";
 @import "blog-style";
