--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -3,6 +3,7 @@
 @charset "utf-8";
 @import "colors";
 @import "bootstrap";
+@import "font-awesome";
 @import "spacing";
 @import "syntax-highlighting";
 @import "blog-style";
