Add post on skip links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <div class="navbar navbar-default">
   <div class="container">
     <nav class="navbar-header">
+      <a id="skip-to-main-link" href="#main" class="sr-only sr-only-focusable pull-left ">Skip to main content.</a>  
       <a class="navbar-brand" href="{{ '/' | relative_url }}">
         <img alt="LevelUp" src="{{ '/assets/images/levelup-logo.svg' | relative_url }}" height="43">
       </a>
