--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-8 col-sm-offset-2 main">
+        <div class="col-xs-12 col-sm-8 col-sm-offset-2 main" role="main">
           {{ content }}
         </div>
       </div>
